[package]
name = "lookingglass"
description = "Neogate LookingGlass"
version = "2.0.0"
edition = "2021"

[dependencies]
async-shutdown = "0.1.2"
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["server", "http1", "http2"] }
hyper-tungstenite = "0.9.0"
libc = "0.2.153"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = "1.0.104"
serde_json = "1.0.44"
tokio = { version = "1.38.2", features = ["macros", "net", "rt-multi-thread", "signal", "process"] }
